--- a/css/style.css
+++ b/css/style.css
@@ -1615,11 +1615,17 @@ img {
     font-size: 12px;
     line-height: 15px;
   }
+  .navbar-menu__link:hover {
+    color: inherit;
+  }
   .search__input {
     width: 340px;
   }
   .user__avatar {
     margin-left: 26px;
+  }
+  .user__name:hover {
+    color: #333333;
   }
   .hotel {
     padding-bottom: 53px;
@@ -1681,6 +1687,7 @@ img {
   }
   .activities {
     padding-top: 47px;
+    padding-bottom: 49px;
   }
   .activities-wrapper {
     -ms-flex-wrap: wrap;
@@ -1695,6 +1702,75 @@ img {
   }
   .card__title {
     max-width: 200px;
+  }
+  .footer {
+    padding-top: 73px;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: (1fr)[6];
+        grid-template-columns: repeat(6, 1fr);
+    grid-row-gap: 50px;
+  }
+  .footer__input {
+    -ms-flex-preferred-size: 49%;
+        flex-basis: 49%;
+  }
+  .footer__logo {
+    width: 95px;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: span 1;
+  }
+  .footer__category {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    grid-column: span 1;
+  }
+  .footer__social-network {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    grid-column: span 4;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-left: 15px;
+    margin-top: 15px;
+  }
+  .footer__additional {
+    grid-column: span 3;
+    margin-left: 30px;
+  }
+  .footer__legal {
+    grid-column: span 2;
+  }
+  .footer__title--mb-3 {
+    margin-bottom: 22px;
+    line-height: 45px;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    grid-column: span 5;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    grid-column: span 5;
+  }
+  .footer__link:hover {
+    color: inherit;
+  }
+  .img-facebook:hover {
+    background-image: url("../img/facebook.svg");
+  }
+  .img-youtube:hover {
+    background-image: url("../img/youtube.svg");
+  }
+  .img-instagram:hover {
+    ackground-image: url("../img/instagram.svg");
   }
 }
 
@@ -1934,6 +2010,7 @@ img {
   }
   .activities {
     padding-top: 22px;
+    padding-bottom: 39px;
   }
   .activities__title {
     margin-bottom: 38px;
@@ -1998,6 +2075,70 @@ img {
   }
   .detailed-pack {
     display: none;
+  }
+  .footer {
+    padding-top: 67px;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-row-gap: 25px;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__social-network {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    margin-left: 0px;
+    margin-bottom: 27px;
+  }
+  .footer__additional {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    margin: 0;
+  }
+  .footer__category {
+    -ms-grid-row: 5;
+    grid-row: 5;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    margin: 0;
+  }
+  .footer__legal {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 6;
+    grid-row: 6;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 7;
+    grid-row: 7;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__title--inline {
+    margin: 0 43px 21px 0px;
   }
 }
 /*# sourceMappingURL=style.css.map */
