--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -23,12 +23,17 @@
       &__link
         font-size: 12px
         line-height: 15px
+        &:hover
+          color: inherit
   .search
     &__input
       width: 340px
   .user
     &__avatar
       margin-left: 26px
+    &__name
+      &:hover
+        color: $text-color
   .hotel
     padding-bottom: 53px
     &-grid
@@ -70,6 +75,7 @@
           left: 0px
   .activities
     padding-top: 47px
+    padding-bottom: 49px
     &-wrapper
       flex-wrap: wrap
     &__card
@@ -79,6 +85,62 @@
     height: 255px
     &__title
       max-width: 200px
+  .footer
+    padding-top: 73px
+    &-wrapper
+      grid-template-columns: repeat(6, 1fr)
+      grid-row-gap: 50px
+    &__input
+      flex-basis: 49%
+    &__logo
+      width: 95px
+      grid-row: 1 / 2
+      grid-column: span 1
+    &__category
+      grid-row: 2 / 3
+      grid-column: span 1
+    &__social
+      &-network
+        grid-row: 1 / 2
+        grid-column: span 4
+        align-self: center
+        margin-left: 15px
+        margin-top: 15px
+    &__additional
+      grid-column: span 3
+      margin-left: 30px
+    &__legal
+      grid-column: span 2
+    &__title
+      // &-contact
+      //   line-height: 23px
+      //   margin-bottom: 16px
+      // &--inline
+      //   margin: 0 43px 0 0
+      &--mb-3
+        margin-bottom: 22px
+        line-height: 45px
+    &__contact
+      &-details
+        grid-row: 3
+        grid-column: span 5
+      &-form
+        grid-row: 4
+        grid-column: span 5
+    &__link
+      &:hover
+        color: inherit
+  // Подумать еще над этим!!!
+  .img
+    &-facebook
+      &:hover
+        background-image: url("../img/facebook.svg")
+    &-youtube
+      &:hover
+        background-image: url("../img/youtube.svg")
+    &-instagram
+      &:hover
+        ackground-image: url("../img/instagram.svg")
 
 @media (max-width: 767px)
   .container,
@@ -203,7 +265,6 @@
   .card
     width: 48%
     height: 255px
-
 @media (max-width: 576px)
   .container
     max-width: 280px
@@ -247,6 +308,7 @@
       padding-left: 20px
   .activities
     padding-top: 22px
+    padding-bottom: 39px
     &__title
       margin-bottom: 38px
       font-size: 18px
@@ -290,3 +352,40 @@
   .detailed
     &-pack
       display: none
+  .footer
+    padding-top: 67px
+    &-wrapper
+      grid-template-columns: 1fr
+      grid-row-gap: 25px
+    &__logo
+      grid-row: 1
+      grid-column: 1
+    &__social
+      &-network
+        grid-row: 2
+        grid-column: 1
+        flex-direction: column
+        align-items: flex-start
+        margin-left: 0px
+        margin-bottom: 27px
+    &__additional
+      grid-row: 4
+      grid-column: 1
+      margin: 0
+    &__category
+      grid-row: 5
+      grid-column: 1
+      margin: 0
+    &__legal
+      grid-row: 3
+      grid-column: 1
+    &__contact
+      &-details
+        grid-row: 6
+        grid-column: 1
+      &-form
+        grid-row: 7
+        grid-column: 1
+    &__title
+      &--inline
+        margin: 0 43px 21px 0px
