--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,6 +8,7 @@
   .container,
   .newsletter-wrapper
     max-width: 700px
+  // шапка
   .logo
     width: 132px
   .navbar
@@ -34,6 +35,7 @@
     &__name
       &:hover
         color: $text-color
+  // об отеле
   .hotel
     padding-bottom: 53px
     &-grid
@@ -50,6 +52,7 @@
     margin-bottom: 0
   .map
     width: 340px
+  // другие предложения
   .packages
     &__title
       margin-bottom: 50px
@@ -73,6 +76,7 @@
           right: 0px
         &--prev
           left: 0px
+  // о досуге
   .activities
     padding-top: 47px
     padding-bottom: 49px
@@ -85,6 +89,7 @@
     height: 255px
     &__title
       max-width: 200px
+  // подвал
   .footer
     padding-top: 73px
     &-wrapper
@@ -146,11 +151,45 @@
   .newsletter-wrapper
     max-width: 576px
     width: 92%
+  body
+    padding-top: 78px
+  // шапка
   .navbar
-    &__search,
-    &-menu,
+    &__mobile
+      &--fixed
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        z-index: 99
+    &__search, &__user
+      &--mobile
+        &--hidden
+          display: none
+        &--visible
+          display: flex
     &__user
+      flex-direction: column
+      justify-content: center
+    &-button
       display: none
+      position: fixed
+      left: 0
+      right: 0
+      bottom: 0
+      top: 72px
+      padding-top: 10px
+      &--visible
+        display: block
+    &-menu
+      flex-direction: column
+      &__item
+        margin-bottom: 17px
+        &--mobile
+          &--visible
+            display: block
+      &__link
+        line-height: 13px
   .menu
     &-button
       display: flex
@@ -167,6 +206,19 @@
         width: 16px
         height: 1px
         background-color: $text-color
+  .search
+    margin-bottom: 17px
+    &__input
+      width: 243px
+  .user
+    &__name
+      margin-left: 0px
+      color: $light
+      margin-bottom: 9px
+    &__avatar
+      margin-left: 0px
+      margin-bottom: 10px
+  // об отеле
   .stars
     flex-basis: auto
   .hotel
@@ -200,6 +252,7 @@
       margin-right: 0
     .map
       width: 100%
+  // другие предложения
   .packages
     padding-top: 29px
     &__title
@@ -222,6 +275,7 @@
       &__info
         padding: 20px
         grid-template-rows: 15% 190px 122px auto
+  // рассылка
   .newsletter
     padding: 92px 0 93px 0
     &-wrapper
@@ -239,6 +293,7 @@
         line-height: 38px
   .subscribe
     width: 100%
+  // отзывы
   .reviews
     &__title
       font-size: 20px
@@ -261,9 +316,11 @@
           transform: translate(-50%, 0)
       &__text
         text-align: left
+  // о досуге
   .card
     width: 48%
     height: 255px
+  // подвал
   .footer
     &-wrapper
       grid-template-columns: repeat(5, 1fr)
@@ -296,12 +353,14 @@
 @media (max-width: 576px)
   .container
     max-width: 280px
+  // шапка
   .navbar
     &-top
       padding-top: 25px
       padding-bottom: 28px
   .logo
     width: 99px
+  // об отеле
   .hotel
     padding-top: 3px
     padding-bottom: 45px
@@ -318,6 +377,7 @@
           left: 11px
     .map
       height: 165px
+  // рассылка
   .newsletter
     padding: 76px 0 83px 0
     &-wrapper
@@ -334,6 +394,7 @@
     width: 95%
     &__input
       padding-left: 20px
+  // о досуге
   .activities
     padding-top: 22px
     padding-bottom: 39px
@@ -352,6 +413,7 @@
     order: 1
   .card-4
     order: 3
+  // другие предложения
   .packages
     padding-top: 22px
     &__title
@@ -380,6 +442,7 @@
   .detailed
     &-pack
       display: none
+  // подвал
   .footer
     padding-top: 67px
     &-wrapper
