--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -30,6 +30,10 @@
       font-weight: 700
       &:hover
         color: $primary
+    &__item
+      &--mobile
+        &--visible
+          display: none
 .logo
   width: 177px
 .search
